flagd/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-flagd
  namespace: myproject
spec:
  podSelector:
    matchLabels:
      name: strimzi-cluster-operator
      strimzi.io/kind: cluster-operator 
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: strimzi-feature-gates
      ports:
        - protocol: TCP
          port: 8013
